# story_for_you

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: analysis_memory_design.md  continue_failure_analysis_plan.md  dev-architecture.md  specs01.md  style_analysis_plan.md
story_for_you/: __init__.py
story_for_you/analysis/: __init__.py  analyzer_mixin.py  context.py  prompting.py  resumable_analyzer.py  story_analyzer.py  utils.py
story_for_you/analysis/extractors/: __init__.py  chapters.py  characters.py  events.py  relationships.py  state.py  style.py
story_for_you/cache/: __init__.py  progress_store.py  store.py
story_for_you/cli/: __init__.py  main.py
story_for_you/config/: __init__.py  settings.py
story_for_you/core/: __init__.py  character_filter.py  character_remover.py  compressor.py  ending_writer.py  exceptions.py  prompting.py
story_for_you/indexer/: __init__.py  retriever.py  segment.py  serialization.py  service.py  tagger.py
story_for_you/llm/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py  telemetry.py
story_for_you/parser/: __init__.py  text_splitter.py
story_for_you/utils/: __init__.py  chinese_name_utils.py  file_io.py  json_utils.py  prompting.py
tests/: test_cacheable_prompting.py  test_cli_cache_config.py  test_cli_chunking.py  test_ending_validator.py  test_ending_writer_context.py  test_hint_interpreter.py  test_llm_telemetry.py  test_openai_compat.py  test_settings.py  test_strict_schema.py  test_style_enforcer.py  test_style_extractor.py  test_text_splitter.py
(+31 files in other folders)
